Update pathToNonAdjTile